support unit tests with java 17